--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,11 @@ select {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transition: all 0.3s;
+}
+
+.btn:hover {
+  background-color: #007a7c;
 }
 
 .title {
